[package]
name = "DataCargo"
version = "1.3.0"
authors = ["Dmitrij <49795742+DmitrijVC@users.noreply.github.com>"]
edition = "2018"


[dependencies]
serenity = "0.9.0-rc.2"
tokio = "0.2.22"
machine_uuid = "0.1.0"
sysinfo = "0.15.3"
gethostname = "0.2.1"
whoami = "0.9.0"
regex = "1.3.9"
encoding = "0.2.33"
dirs = "3.0.1"
app_dirs = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
